--- a/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.1.csproj
+++ b/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.1.csproj
@@ -77,8 +77,10 @@
     <Compile Include="ChromeTest.cs" />
     <Compile Include="LoginPage.cs" />
     <Compile Include="OnlineStorePage.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FireFoxTest.cs" />
+    <Compile Include="SubcategoryPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
