--- a/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.1.csproj
+++ b/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.1.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Pages\AdminGeoZonesPage.cs" />
     <Compile Include="Pages\AdminMyStorePage.cs" />
     <Compile Include="Pages\AdminUsersPage.cs" />
+    <Compile Include="Pages\CheckoutPage.cs" />
     <Compile Include="Pages\GeneralPage.cs" />
     <Compile Include="Tests\Initialization.cs" />
     <Compile Include="Tests\InternetExplorerTest.cs" />
@@ -85,7 +86,7 @@
     <Compile Include="Records\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FireFoxTest.cs" />
-    <Compile Include="Pages\SubcategoryPage.cs" />
+    <Compile Include="Pages\ProductPage.cs" />
     <Compile Include="Records\User.cs" />
   </ItemGroup>
   <ItemGroup>
