OpenNewWindowsByClickOnLinkInChrome is completed

--- a/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.csproj
+++ b/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.csproj
@@ -67,6 +67,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Pages\AdminAddNewCountryPage.cs" />
     <Compile Include="Pages\AdminAddNewProductPage.cs" />
     <Compile Include="Pages\AdminCatalogPage.cs" />
     <Compile Include="Pages\AdminCountiresPage.cs" />
