--- a/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.csproj
+++ b/SeleniumTasksProject1.1/SeleniumTasksProject1.1/SeleniumTasksProject1.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Pages\AdminEditGeoZonePage.cs" />
     <Compile Include="Pages\AdminGeoZonesPage.cs" />
     <Compile Include="Pages\AdminMyStorePage.cs" />
+    <Compile Include="Pages\AdminOrdersPage.cs" />
     <Compile Include="Pages\AdminUsersPage.cs" />
     <Compile Include="Pages\CheckoutPage.cs" />
     <Compile Include="Pages\GeneralPage.cs" />
